# DBMS-Cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  cpu.cu  database_creator.py  execute_duckdb.cpp  execute_duckdb.cu  gpu.cu  main.cu
DB/: Employees.csv  Products.csv  SalesOrders.csv  course.csv  school.csv  student.csv
SampleTest/: query1.txt  query2.txt  query3.txt  result1.csv  result2.csv  result3.csv
kernels/: agg.cu  agg.cuh  get.cu  get.cuh  join.cu  join.cuh  project.cu  project.cuh  sort.cu  sort.cuh
utilities/: filter_utilities.cpp  filter_utilities.hpp  join_utilities.cpp  join_utilities.hpp  schema_utilities.cpp  schema_utilities.hpp
